# fastapi-bolierplate

./: .env  .env.example  .gitignore  Docker  Makefile  README.md  a.html  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: c99ade85c764_initial.py  d03c90851c3a_autogenerated.py  d790c337f3ec_added_user_account.py
app/: main.py
app/core/: config.py  logging.py
app/db/: migration.py  query_builder.py  session.py
app/db/models/: __init__.py  user.py
app/middleware/: logging_midleware.py
app/redis/: redis_instance.py
app/routes/: api_router.py  auth_routes.py  health_routes.py  user_routes.py
app/schemas/: auth.py  response.py  user.py
app/services/: auth_service.py  user_service.py
app/utlis/: generateJwt.py  verifyPwd.py
docker/: docker-compose.yml
migrations/: env.py
migrations/versions/: c0fc072389ad_initial.py  f937cc135515_added_full_name_column.py
